--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Guia para um engenheiro</title>
   <link href="assets/css/reset_.css" rel="stylesheet">
   <link href="grid.css" rel="stylesheet">
-  <link href="assets/css/style_.css" rel="stylesheet">
+  <link href="assets/css/index.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=EB+Garamond&display=swap" rel="stylesheet">
   <meta charset="utf-8">
