--- a/categoria.html
+++ b/categoria.html
@@ -13,12 +13,12 @@
 	<body>
 	  <header class="header">
 	    <figure class="item-menu">
-	      <a href="#"><img class="menu-image" src="assets/img/menu.png" alt="Abrir Menu"></a>
+	      <img class="menu-image" src="assets/img/menu.png" alt="Abrir Menu">
 	      <ul class="menu">
 	        <li class="item">
 	          <p class="title">Menu</p>
 	          <ul class="submenu">
-	            <li class="subitem"><a href="categoia.html"> Design </a></li>
+	            <li class="subitem"><a href="categoria.html"> Design </a></li>
 	            <li class="subitem"><a href="categoria.html"> Elétrica </a></li>
 	            <li class="subitem"><a href="categoria.html"> Mateática </a></li>
 	            <li class="subitem"><a href="categoria.html"> Programcação </a></li>
@@ -36,13 +36,13 @@
 	          <div class="curriculo-texto">
 	            <p class="header-items">Currículo</p>
 	          </div>
-	          <a href="index.html"><img class="curriculo-image" src="assets/img/curriculo.png" alt="Imagem currículo"></a>
+	          <img class="curriculo-image" src="assets/img/curriculo.png" alt="Imagem currículo">
 	        </figure>
 	        <figure class="item-procurar">
 	          <div class="procurar-texto">
 	            <p class="header-items">Procurar</p>
 	          </div>
-	          <a href="index.html"><img class="lupa-image" src="assets/img/lupa.png" alt="Imagem procurar"></a>
+	          <img class="lupa-image" src="assets/img/lupa.png" alt="Imagem procurar">
 	        </figure>
 	      </div>
 	    </nav>
