--- a/projeto.html
+++ b/projeto.html
@@ -16,7 +16,7 @@
 
    <header class="header">
     <figure class="item-menu">
-      <a href="#"><img class="menu-image" src="assets/img/menu.png" alt="Abrir Menu"></a>
+      <img class="menu-image" src="assets/img/menu.png" alt="Abrir Menu">
       <ul class="menu">
         <li class="itemm">
           <p class="title">Menu</p>
@@ -39,13 +39,13 @@
           <div class="curriculo-texto">
             <p class="header-items">Currículo</p>
           </div>
-          <a href="index.html"><img class="curriculo-image" src="assets/img/curriculo.png" alt="Imagem currículo"></a>
+          <img class="curriculo-image" src="assets/img/curriculo.png" alt="Imagem currículo">
         </figure>
         <figure class="item-procurar">
           <div class="procurar-texto">
             <p class="header-items">Procurar</p>
           </div>
-          <a href="index.html"><img class="lupa-image" src="assets/img/lupa.png" alt="Imagem procurar"></a>
+          <img class="lupa-image" src="assets/img/lupa.png" alt="Imagem procurar">
         </figure>
       </div>
     </nav>
