--- a/projeto.html
+++ b/projeto.html
@@ -21,7 +21,7 @@
         <li class="itemm">
           <p class="title">Menu</p>
           <ul class="submenu">
-            <li class="subitem"><a href="categoia.html"> Design </a></li>
+            <li class="subitem"><a href="categoria.html"> Design </a></li>
             <li class="subitem"><a href="categoria.html"> Elétrica </a></li>
             <li class="subitem"><a href="categoria.html"> Mateática </a></li>
             <li class="subitem"><a href="categoria.html"> Programcação </a></li>
