--- a/categoria.html
+++ b/categoria.html
@@ -20,7 +20,7 @@
 	          <ul class="submenu">
 	            <li class="subitem"><a href="categoria.html"> Design </a></li>
 	            <li class="subitem"><a href="categoria.html"> Elétrica </a></li>
-	            <li class="subitem"><a href="categoria.html"> Mateática </a></li>
+	            <li class="subitem"><a href="categoria.html"> Matemática </a></li>
 	            <li class="subitem"><a href="categoria.html"> Programcação </a></li>
 	          </ul>
 	        </li>
