--- a/categoria.html
+++ b/categoria.html
@@ -63,7 +63,7 @@
 			</div>
 			<div class="introducao">
 				<p>
-					Aqui você pode verificar os projetos reliazados dentro da categoria de Elétrica. Para acessa-los, basta clicar nos links abaixo.
+					Aqui você pode verificar os projetos reliazados dentro desta categoria. Para acessa-los, basta clicar nos links abaixo.
 				</p>
 			</div>
 
