--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <main class="main">
   <div class="desc_usuario">
     <figure class="figure1">
-      <img class="imagem1" src="https://picsum.photos/300/200/?random" alt="Foto do Usuário"> 
+      <img class="imagem1" src="assets/img/Perfil.jpg" alt="Foto do Usuário"> 
     </figure>
     <div class="biografia">
       <p class="biografia-texto-1">
