--- a/projeto.html
+++ b/projeto.html
@@ -8,8 +8,11 @@
     <link href="grid.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=EB+Garamond&display=swap" rel="stylesheet">
+    <script src="assets/js/codes.js"></script>
+    <script src="assets/js/projetos.js"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+
   </head>
 
   <body>
@@ -21,10 +24,10 @@
         <li class="itemm">
           <p class="title">Menu</p>
           <ul class="submenu">
-            <li class="subitem"><a href="categoria.html"> Design </a></li>
-            <li class="subitem"><a href="categoria.html"> Elétrica </a></li>
-            <li class="subitem"><a href="categoria.html"> Matemática </a></li>
-            <li class="subitem"><a href="categoria.html"> Programcação </a></li>
+           {{#each portfolio}}
+          <li class="subitem"><a href="categoria.html?key={{@key}}"> {{this.categoria}} </a></li>
+          {{/each}}
+          
           </ul>
         </li>
       </ul>
