--- a/projeto.html
+++ b/projeto.html
@@ -25,7 +25,7 @@
           <p class="title">Menu</p>
           <ul class="submenu">
            {{#each portfolio}}
-          <li class="subitem"><a href="categoria.html?key={{@key}}"> {{this.categoria}} </a></li>
+          <li class="subitem"><a class: "link_menu" href="categoria.html?key={{@key}}"> {{this.categoria}} </a></li>
           {{/each}}
           
           </ul>
