--- a/categoria.html
+++ b/categoria.html
@@ -20,10 +20,10 @@
 		      <li class="item">
 		        <p class="title">Menu</p>
 		        <ul class="submenu">
-		          <li class="subitem"><a href="categoria.html"> Design </a></li>
-		          <li class="subitem"><a href="categoria.html"> Elétrica </a></li>
-		          <li class="subitem"><a href="categoria.html"> Matemática </a></li>
-		          <li class="subitem"><a href="categoria.html"> Programcação </a></li>
+		          <li class="subitem"><a class="link_menu" href="categoria.html"> Design </a></li>
+		          <li class="subitem"><a class="link_menu" href="categoria.html"> Elétrica </a></li>
+		          <li class="subitem"><a class="link_menu" href="categoria.html"> Matemática </a></li>
+		          <li class="subitem"><a class="link_menu" href="categoria.html"> Programcação </a></li>
 		        </ul>
 		      </li>
 		    </ul>
