--- a/projeto.html
+++ b/projeto.html
@@ -61,7 +61,7 @@
     </figure>
 
     <div class="container2 projeto_n">
-      <h1 class ="item">Projeto 1</h1>
+      <h1 class ="item">{{titulo}}</h1>
     </div>
     <div class="container-pai">
       <section class="container colunas">
