--- a/projeto.html
+++ b/projeto.html
@@ -62,16 +62,17 @@
 
     <div class="container2 projeto_n">
       <h1 class ="item">{{titulo}}</h1>
+
     </div>
     <div class="container-pai">
       <section class="container colunas">
         <div class="item1">Descrição</div>
-        <div class="item0">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod. Vorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmo, ed do eiusmod. Vorem ipsum dolor sit amet, consectetur adipisicing</div>
+        <div class="item0">{{descricao}}</div>
       </section>
 
       <section class="container colunas_desc">
         <div class="item1">Integrantes</div>
-        <div class="item0">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod. Vorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmo, ed do eiusmod. Vorem ipsum dolor sit amet, consectetur adipisicing</div>
+        <div class="item0">{{equipe}}</div>
       </section>
     </div>
 
