--- a/projeto.html
+++ b/projeto.html
@@ -57,7 +57,7 @@
 
    <main class="main">
     <figure class="cover">
-      <img class="capa" src="https://picsum.photos/1350/300/?random" alt="Imagem da categoria">
+      <img class="capa" src="assets/img/{{titulo}}.jpeg" onclick="projetofunc('{{@key}}')" alt="{{titulo}}">
     </figure>
 
     <div class="container2 projeto_n">
