--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
        Informações
      </p>
      <p class="textobio">
-       Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-       tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+       Jussara da Silva Pereira, nascida em 1986, é formada em Engenharia Mecatrônica pelo Instituto de Ensino e Pesquisa Insper. Atualemnte, é CEO da Oracle.
 
      </p>
    </div>
